EDA, QC, exclude sample B, cluster, annotate

--- a/references.bib
+++ b/references.bib
@@ -27,3 +27,27 @@
 	url = {http://dx.doi.org/10.1038/ncomms14049},
 	langid = {en}
 }
+
+@article{durinck2009,
+	title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
+	author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+	year = {2009},
+	month = {07},
+	date = {2009-07-23},
+	journal = {Nature Protocols},
+	pages = {1184--1191},
+	volume = {4},
+	number = {8},
+	doi = {10.1038/nprot.2009.97},
+	url = {http://dx.doi.org/10.1038/nprot.2009.97},
+	langid = {en}
+}
+
+@article{Seurat,
+	title = {Integrated analysis of multimodal single-cell data},
+	author = {Hao, Yuhan and Hao, Stephanie and Andersen-Nissen, Erica and III, William M. Mauck and Zheng, Shiwei and Butler, Andrew and Lee, Maddie J. and Wilk, Aaron J. and Darby, Charlotte and Zagar, Michael and Hoffman, Paul and Stoeckius, Marlon and Papalexi, Efthymia and Mimitou, Eleni P. and Jain, Jaison and Srivastava, Avi and Stuart, Tim and Fleming, Lamar B. and Yeung, Bertrand and Rogers, Angela J. and McElrath, Juliana M. and Blish, Catherine A. and Gottardo, Raphael and Smibert, Peter and Satija, Rahul},
+	year = {2021},
+	date = {2021},
+	doi = {10.1016/j.cell.2021.04.048},
+	url = {https://doi.org/10.1016/j.cell.2021.04.048}
+}
