proteomics data preprocessing (info from MPI proteomics facility)

--- a/references.bib
+++ b/references.bib
@@ -51,3 +51,41 @@
 	doi = {10.1016/j.cell.2021.04.048},
 	url = {https://doi.org/10.1016/j.cell.2021.04.048}
 }
+
+@article{Cox2008,
+	title = {MaxQuant enables high peptide identification rates, individualized p.p.b.-range mass accuracies and proteome-wide protein quantification},
+	author = {Cox, {Jürgen} and Mann, Matthias},
+	year = {2008},
+	month = {11},
+	date = {2008-11-30},
+	journal = {Nature Biotechnology},
+	pages = {1367--1372},
+	volume = {26},
+	number = {12},
+	doi = {10.1038/nbt.1511},
+	url = {http://dx.doi.org/10.1038/nbt.1511},
+	langid = {en}
+}
+
+@article{Huber2002,
+	title = {Variance stabilization applied to microarray data calibration and to the quantification of differential expression},
+	author = {Huber, W. and von Heydebreck, A. and Sultmann, H. and Poustka, A. and Vingron, M.},
+	year = {2002},
+	month = {07},
+	date = {2002-07-01},
+	journal = {Bioinformatics},
+	pages = {S96--S104},
+	volume = {18},
+	number = {Suppl 1},
+	doi = {10.1093/bioinformatics/18.suppl_1.s96},
+	url = {http://dx.doi.org/10.1093/bioinformatics/18.suppl_1.s96},
+	langid = {en}
+}
+
+@article{base,
+	title = {R: A Language and Environment for Statistical Computing},
+	author = {, R Core Team},
+	year = {2022},
+	date = {2022},
+	url = {https://www.R-project.org/}
+}
