--- a/references.bib
+++ b/references.bib
@@ -89,3 +89,68 @@
 	date = {2022},
 	url = {https://www.R-project.org/}
 }
+
+@article{tidyverse,
+	title = {Welcome to the {\textbraceleft}tidyverse{\textbraceright}},
+	author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, {Lucy D'Agostino} and {François}, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and {Müller}, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+	year = {2019},
+	date = {2019},
+	pages = {1686},
+	volume = {4},
+	doi = {10.21105/joss.01686}
+}
+
+@article{ComplexHeatmap,
+	title = {Complex heatmaps reveal patterns and correlations in multidimensional genomic data},
+	author = {Gu, Zuguang and Eils, Roland and Schlesner, Matthias},
+	year = {2016},
+	date = {2016}
+}
+
+@article{ggrepel,
+	title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
+'ggplot2'},
+	author = {Slowikowski, Kamil},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=ggrepel}
+}
+
+@article{ggpubr,
+	title = {ggpubr: 'ggplot2' Based Publication Ready Plots},
+	author = {Kassambara, Alboukadel},
+	year = {2020},
+	date = {2020},
+	url = {https://CRAN.R-project.org/package=ggpubr}
+}
+
+@article{ggthemes,
+	title = {ggthemes: Extra Themes, Scales and Geoms for 'ggplot2'},
+	author = {Arnold, Jeffrey B.},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=ggthemes}
+}
+
+@article{ggplot2,
+	title = {ggplot2: Elegant Graphics for Data Analysis},
+	author = {Wickham, Hadley},
+	year = {2016},
+	date = {2016},
+	url = {https://ggplot2.tidyverse.org}
+}
+
+@article{Wu2021,
+	title = {clusterProfiler 4.0: A universal enrichment tool for interpreting omics data},
+	author = {Wu, Tianzhi and Hu, Erqiang and Xu, Shuangbin and Chen, Meijun and Guo, Pingfan and Dai, Zehan and Feng, Tingze and Zhou, Lang and Tang, Wenli and Zhan, Li and Fu, Xiaocong and Liu, Shanshan and Bo, Xiaochen and Yu, Guangchuang},
+	year = {2021},
+	month = {08},
+	date = {2021-08},
+	journal = {The Innovation},
+	pages = {100141},
+	volume = {2},
+	number = {3},
+	doi = {10.1016/j.xinn.2021.100141},
+	url = {http://dx.doi.org/10.1016/j.xinn.2021.100141},
+	langid = {en}
+}
